feat:right-content

--- a/src/index.jade
+++ b/src/index.jade
@@ -14,7 +14,7 @@ html(lang="zh-cmn-Hans")
             .left-content
                 .user-info
                     .user-photo
-                        img(src='./logo.jpeg')
+                        img(src='./logo.jpg')
                     .user-name 张志达
                     .user-base
                         p   25岁
@@ -34,10 +34,26 @@ html(lang="zh-cmn-Hans")
                         i.fa.fa-envelope-o
                         | zzd550510593@163.com
             .right-content
-                .educaition
-                    h1 教育背景
+                .education
+                    .title
+                        i.fa.fa-graduation-cap
+                        h1 教育背景
+                    .h-school 西安电子科技大学
+                    .h-date 2010年9月至2014年7月
+                    .h-specialty 本科   信息安全专业
                 .work-company
+                    .title
+                        i.fa.fa-user-circle-o
+                        h1 工作经历
+                    .h-company 广东省广州华工信元通信技术有限公司
+                    .h-date 2014年7月至今
+                    .h-specialty 前端工程师,NodeJs后端工程师
                 .work-experience
+                    .title
+                        i.fa.fa-chrome
+                        h1 项目经历
+                    div(ui-project)
+
 
 
 
