--- a/src/css/style.css
+++ b/src/css/style.css
@@ -18,16 +18,18 @@ body {
     font-family: Lato,"Microsoft YaHei",sans-serif;
     font-weight: 400;
     font-size: 1.1em;
-    background: #f1eee8;
+    background: #8c908c;
+
 }
 
 
 .page  {
-    position:absolute;
-    width:100%;
-    height:100%;
-    min-width: 680px;
-    min-height:961px
+    position:relative;
+    width:740px;
+    height:1077px;
+    background: #f1eee8;
+    margin:0 auto;
+    overflow: hidden;
 }
 
 .left-content  {
@@ -133,7 +135,7 @@ body {
     border:none
 }
 
-/*.ui-progress-bar-corner {
+.ui-progress-bar-corner {
     width:5px;
     height:15px;
     position: absolute;
@@ -141,7 +143,7 @@ body {
     top:0;
     background: #f1eee8;
     border-radius: 5px 0 0 5px;
-}*/
+}
 
 .user-description {
     font-size: 20px;
@@ -153,6 +155,32 @@ body {
     word-wrap: break-word;
     white-space: pre-wrap;
     white-space: -moz-pre-wrap;
+}
+
+.user-hobby  {
+    position: relative;
+    height: 40px;
+    font-size:20px;
+    background: #f1eee8;
+    width:300px;
+    border-radius: 80px 0  80px 0;
+    transform: translate3d(-20px,0,0);
+    color:rgb(79, 102, 123);
+    margin-bottom: 20px;
+    padding-left: 100px;
+    padding-top:10px;
+}
+
+.user-hobby-title  {
+    position: absolute;
+    font-size: 20px;
+    left:50px;
+    top: 10px;
+}
+
+.user-hobby-block  {
+    float:left;
+    padding:0 10px;
 }
 
 .user-contact {
@@ -169,11 +197,10 @@ body {
 .user-contact div {
     color:#f1eee8;
     margin: 10px 0;
-    text-decoration: underline;
 }
 
-.education,.work-company  {
-    margin:20px 0;
+.education,.work-company,.work-experience  {
+    margin:40px 0;
 }
 
 .h-school,.h-company  {
