--- a/src/index.jade
+++ b/src/index.jade
@@ -4,17 +4,17 @@ html(lang="zh-cmn-Hans")
         meta(charset="UTF-8")
         meta(name="viewport" content="width=device-width,initial-scale=1.0")
         title   张志达的简历
-        link(rel="stylesheet" href="style.css" type="text/css")
+        link(rel="stylesheet" href="./css/style.css" type="text/css")
         link(rel="stylesheet" href="//cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css" type="text/css")
-        script(src="./angular.js")
-        script(src="./index.js")
+        script(src="./js/angular.js")
+        script(src="./js/index.js")
 
     body(ng-app='CV')
         section.page
             .left-content
                 .user-info
                     .user-photo
-                        img(src='./logo.jpeg')
+                        img(src='./data/logo.jpg')
                     .user-name 张志达
                     .user-base
                         p   25岁
@@ -26,6 +26,15 @@ html(lang="zh-cmn-Hans")
                         div(ui-progress data-percent=val data-name=key)
                 .user-description
                     pre 我对学习新技术充满热情,有较强的自学能力,同时也能够独立查询资料来解决问题,并且坚持有条理的进行工作。对es6进行过学习，未来希望使用vue或者react进行开发。同时加强NodeJs的能力，希望成为一个全栈工程师。
+                .user-hobby
+                    .user-hobby-title 爱好:
+                    .user-hobby-block
+                        i.fa.fa-futbol-o
+                        | 足球
+                    .user-hobby-block
+                        i.fa.fa-steam-square
+                        | 刀塔
+
                 .user-contact
                     div
                         i.fa.fa-address-book-o
