--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,42 +19,42 @@ body {
     font-weight: 400;
     font-size: 1.1em;
     background: #8c908c;
-
 }
 
 
 .page  {
-    position:relative;
-    width:740px;
-    height:1077px;
+    position:absolute;
+    width:100%;
     background: #f1eee8;
+    min-height: 1077px;
+    min-width:740px;
     margin:0 auto;
     overflow: hidden;
+    background: -webkit-linear-gradient(left,  #4f667b 0%,#f1eee8 100%);
+
 }
 
 .left-content  {
-    position: absolute;
-    top:0;
-    left:0;
+    display: inline-block;
     min-width: 300px;
-    padding:10px 20px;
+    padding:0 20px;
     width:40%;
     height: 100%;
-    background: #4f667b;
+    /*background: #4f667b;*/
+    vertical-align: top;
 }
 
 .right-content  {
-    position: absolute;
-    top:0;
-    right:0;
-    width:59%;
+    display: inline-block;
+    width:57%;
     height: 100%;
-    padding:10px 20px;
+    padding:0 20px;
+    vertical-align: top;
 }
 
 .user-info  {
     width:100%;
-    padding-top:30px;
+    padding-top:20px;
 }
 
 .user-photo  {
@@ -135,18 +135,18 @@ body {
     border:none
 }
 
-.ui-progress-bar-corner {
-    width:5px;
-    height:15px;
-    position: absolute;
-    right:65%;
-    top:0;
-    background: #f1eee8;
-    border-radius: 5px 0 0 5px;
-}
+/*.ui-progress-bar-corner {*/
+    /*width:5px;*/
+    /*height:15px;*/
+    /*position: absolute;*/
+    /*right:65%;*/
+    /*top:0;*/
+    /*background: #f1eee8;*/
+    /*border-radius: 5px 0 0 5px;*/
+/*}*/
 
 .user-description {
-    font-size: 20px;
+    font-size: 18px;
     text-indent: 2em;
     color:#e6e0cf;
 }
@@ -162,19 +162,18 @@ body {
     height: 40px;
     font-size:20px;
     background: #f1eee8;
-    width:300px;
+    width:100%;
     border-radius: 80px 0  80px 0;
-    transform: translate3d(-20px,0,0);
     color:rgb(79, 102, 123);
     margin-bottom: 20px;
-    padding-left: 100px;
+    padding-left: 80px;
     padding-top:10px;
 }
 
 .user-hobby-title  {
     position: absolute;
     font-size: 20px;
-    left:50px;
+    left:30px;
     top: 10px;
 }
 
@@ -200,7 +199,7 @@ body {
 }
 
 .education,.work-company,.work-experience  {
-    margin:40px 0;
+    margin:20px 0 0 0;
 }
 
 .h-school,.h-company  {
@@ -272,7 +271,6 @@ body {
 
 .project-description  {
     overflow: visible;
-    background:#f1eee8;
     border:none;
     padding-left: 18px;
     width:100%;
